--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 section {
-    width: 60%;
+    width: 70%;
     margin: auto;
 }
 
@@ -22,6 +22,11 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.flag {
+    width: 3%;
+    margin: 10px 0;
 }
 
 a {
@@ -180,25 +185,7 @@ input[type=submit]:hover {
     background-color: cadetblue;
     color: #ffffff;
 }
-
-.btn-perfil {
-    margin: auto;
-    width: 300px;
-    padding: 5px 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-.btn-datos {
-    margin: auto;
-    width: 300px;
-    padding: 5px 0;
-    display: flex;
-    justify-content: center;
-}
-
-.ok-form, .warning-form,
-.error-form {
+.warning-form, .error-form {
     padding: 5px 0 5px;
     margin-bottom: 15px;
     border-radius: 5px;
@@ -214,6 +201,7 @@ input[type=submit]:hover {
     background-color: rgba(245, 250, 110, 1);
     color: #000;
 }
+
 .pestania {
     padding: 5px;
     width: 49%;
@@ -227,16 +215,6 @@ input[type=submit]:hover {
 .pestania:hover {
     color: #fff;
     background-color: deeppink;
-}
-
-.pestania-wrap {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-
-.disabled{
-    color: #fff;
 }
 
 .tema {
@@ -262,29 +240,6 @@ input[type=submit]:hover {
     font-size: 13px;
 }
 
-.comentario-form {
-    padding: 16px 0px 0px 20px;
-    display: block;
-    margin: auto;
-    width: 90%;
-    border: none;
-    border-bottom: 1px solid;
-    border-radius: 0 0px 5px 5px;
-    font-size: 16px;
-    background-color: transparent;
-    outline: 0px;
-    height: 300px;
-}
-
-input[type=submit].editar {
-    width: auto;
-    height: 20px;
-    padding: 5px;
-    border-radius: 0;
-    margin: 5px;
-    background-color: #cccccc;
-}
-
 #nuevo_tema {
     background-color: #f1f1f1;
     width: 12%;
@@ -295,66 +250,53 @@ input[type=submit].editar {
     font-size: 14px;
 }
 
-.titulo_tema {
-    background-color: #f1f1f1;
-    height: 60px;
-    padding: 0px 10px;
-    border: solid 1px cadetblue;
+h4 {
+    margin: 0 0 10px 0;
+    height: 30px;
+    line-height: 30px;
+    font-size: 18px;
 }
 
-.titulo_tema h4 {
-    height: 60px;
-    line-height: 60px;
-    font-size: 20px;
-}
-
-.comentario {
+.tabla {
     position: relative;
-    min-height: 100px;
     background-color: #f1f1f1;
-    padding: 40px 10px;
-    margin: 1px 0;
-    border: solid 1px cadetblue;
-}
-
-.comentario p {
-    text-align: left;
-    margin-bottom: 30px;
-}
-
-.comentario h5 {
-    position: absolute;
-    bottom: 10px;
-}
-
-textarea {
-    max-width: 100%;
-    min-width: 100%;
-    min-height: 200px;
-    max-height: 500px;
-    margin: 10px 0 30px;
-    padding: 20px;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.input_titulo {
-    width: 100%;
-    height: 40px;
-    margin: 10px 0;
-    font-size: 16px;
     padding: 10px 20px;
+    margin: 5px 0;
+    border: solid 1px cadetblue;
+
 }
 
-.botones {
-    display: flex;
-    justify-content: right;
-    margin-bottom: 15px;
+tr:nth-child(even) {
+    background-color: #e1e1e1;
 }
 
-.botonForm {
-    display: inline-block;
-    justify-content: right;
+tr {
+    height: 30px;
+}
+
+.head {
+    font-weight: bolder;
+}
+
+th {
+    width: 120px;
+    font-size: 14px;
+    font-weight: normal;
+    border: 0px;
+}
+
+.column_small {
+    width: 60px;
+}
+
+.column_big {
+    width: 180px;
+}
+
+.limit {
+    color: red;
+    font-size: 12px;
+    text-align: center;
 }
 
 .boton {
@@ -371,17 +313,4 @@ textarea {
 
 .login_form {
     text-align: center;
-}
-
-.comment-form {
-    padding: 20px;
-    border-radius: 5px;
-    font-size: 16px;
-    margin-bottom: 0;
-}
-
-.boton_perfil {
-    display: inline-block;
-    width: 145px;
-    height: 20px;
 }
